--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,5 +5,19 @@
     </head>
     <body>
     <p>Welcome to Schedule Generator</p>
+
+    <form class="upload">
+        <input type="file" name="uploadFile" accept=".csv" required />
+        <br/><br/>
+        <input type="submit" />
+    </form>
+
+    <script type="module"> import { parse } from './modules/csv.js' </script>
+    <script type="module" src="./modules/script.js"></script>
+
+    <p id="file-info"></p>
+    <br/><br/>
+    <p id="result"></p>
+
     </body>
 </html>
