Add QualityHandler and move out logic from Service with tests

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,7 @@
     <label for="paramMatchFeature">Match requested room feature</label>
     <br/><br/>
 
+    <h2>Upload Rooms and Classes files in CSV format</h2>
     <form class="upload">
         <p>Select and upload a CSV file containing the Rooms</p>
         <input type="file" name="uploadRooms" accept=".csv" required />
